Fix broken searchbar on safari

--- a/themes/xoxzo/static/css/main.css
+++ b/themes/xoxzo/static/css/main.css
@@ -91,6 +91,7 @@ header {
 
 .header-lg input, .header-lg input:hover, .header-lg input:focus, .header-sm input, .header-sm input:hover, .header-sm input:focus {
     border: none;
+    height: 36px;
 }
 
 .header-lg .btn, .header-sm .btn {
